--- a/Matchismo/Base.lproj/LaunchScreen.xib
+++ b/Matchismo/Base.lproj/LaunchScreen.xib
@@ -9,10 +9,26 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="li5-PK-70p">
+                    <rect key="frame" x="115" y="115" width="250" height="250"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="250" id="Q20-bn-Y7o"/>
+                        <constraint firstAttribute="width" constant="250" id="XyE-Pn-eab"/>
+                    </constraints>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstAttribute="centerY" secondItem="li5-PK-70p" secondAttribute="centerY" id="DVl-Df-imI"/>
+                <constraint firstAttribute="centerX" secondItem="li5-PK-70p" secondAttribute="centerX" id="KjG-P3-Pl5"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="Icon" width="512" height="512"/>
+    </resources>
 </document>
